# umbrella

./: .gitignore  Cargo.toml  LICENSE  README.md  dashboard.example.json  flake.nix
src/: app.rs  client.rs  latest.rs  main.rs  metrics.rs  options.rs  report.rs  serve.rs  update.rs
