[package]
name = "umbrella"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
humantime = "2"
parking_lot = "0.12"
prometheus = "0.13"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.10", features = ["tls", "transport", "tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = "0.2"

# Penumbra dependencies
penumbra-proto = { git = "https://github.com/penumbra-zone/penumbra", default-features = false, features = ["rpc"]  }
penumbra-stake = { git = "https://github.com/penumbra-zone/penumbra", default-features = false  }
# penumbra-num = { git = "https://github.com/penumbra-zone/penumbra", default-features = false  }
# penumbra-keys = { git = "https://github.com/penumbra-zone/penumbra", default-features = false  }
# penumbra-transaction = { git = "https://github.com/penumbra-zone/penumbra", default-features = false }
# penumbra-asset = { git = "https://github.com/penumbra-zone/penumbra", default-features = false }
# penumbra-governance = { git = "https://github.com/penumbra-zone/penumbra", default-features = false  }
# penumbra-community-pool = { git = "https://github.com/penumbra-zone/penumbra", default-features = false }
# penumbra-distributions = { git = "https://github.com/penumbra-zone/penumbra", default-features = false }
# penumbra-ibc = { git = "https://github.com/penumbra-zone/penumbra", default-features = false }
# penumbra-fee = { git = "https://github.com/penumbra-zone/penumbra", default-features = false }
# penumbra-funding = { git = "https://github.com/penumbra-zone/penumbra", default-features = false }
# penumbra-sct = { git = "https://github.com/penumbra-zone/penumbra", default-features = false }
# penumbra-shielded-pool = { git = "https://github.com/penumbra-zone/penumbra", default-features = false }
# penumbra-compact-block = { git = "https://github.com/penumbra-zone/penumbra", default-features = false  }
# tendermint = { version = "0.34.0", default-features = false }